# microservmatricula/server/api/controllers/matricula/router.ts
@@ -13,8 +13,4 @@ import controller from './matriculacontroller';
 
 export default express
     .Router()
-    .get('/', controller.all)
-    .get('/:id', controller.getById)
-    .post('/', controller.post)
-    .put('/:id', controller.update)
-    .delete('/:id', controller.delete);
+    .post('/event', controller.updateEvent);
